seriesfinale (0.6.5-1diablo) unstable; urgency=low

  * Diablo-ized version

 -- Juan A. Suarez Romero <jasuarez@igalia.com>  Thu, 11 Nov 2010 16:48:17 +0100

seriesfinale (0.6.5-1) unstable; urgency=low
  * Add sorting shows by most recent episode or name
  * Add auto-rotation support
  * Add settings dialog
  * Fix problems with threads
  * Fix episodes highlight when checking/unchecking all episodes
  * Rewrite settings
  * Add special seasons addition preferences
  * Make returning to the shows view faster
  * Add delete seasons view
 -- Joaquim Rocha <jrocha@igalia.com>  Fri, 08 Oct 2010 18:05:48 +0100

seriesfinale (0.6.1-1) unstable; urgency=low
  * Fix showing next episode
  * Use only one AsyncWorker at a time for shows' tasks
  * Fix updating shows
  * Add Russian translation (thanks to Misha Ketslah)
  * Add THANKS file
  * Add TheTVDB credits
  * Prevent problems when downloading and using images
  * Use a priority queue for updating the shows info and images
 -- Joaquim Rocha <jrocha@igalia.com>  Fri, 16 Jul 2010 10:20:48 +0100

seriesfinale (0.6-1) unstable; urgency=low

  * Fix deleting shows
  * Automate translation files
  * Escape shows and episodes' names for markup
  * Mark already added series when searching
  * Fix episode highlight when episode watched state is updated
  * Prevent erasing database when a problems occurs opening it
  * Add new logo
  * Add language specification when searching and downloading shows
  * Add debug when an exception in async item works
  * Added manual de/serialization using JSON
  * Download images to temporal files
  * Add placeholder and downloading images
  * Update/Retrieve art in the background
  * Remove the images when a show is deleted
  * Do not download images if they already exist
  * Do not delete images if they are used by other shows
  * Start searching when user presses Enter in the search entry
  * Fix some labels
  * Add AUTHORS file
  * Add README file
  * Add THANKS file